# MNIST-NeuralNet-ProjectAdvPT

./: .gitignore  CMakeLists.txt  README.md  build.sh  cleaner.sh  main.cpp  mnist.sh  read_dataset_images.sh  read_dataset_labels.sh
implementation/: CMakeLists.txt
implementation/NeuralNetworkMNIST/: CMakeLists.txt  NeuralNetworkMNIST.cpp
implementation/readImageMNIST/: CMakeLists.txt  readImageMNIST.cpp
implementation/readerImageMNIST/: CMakeLists.txt  readImageMNIST.cpp
implementation/readerLabelMNIST/: CMakeLists.txt  readLabelMNIST.cpp
implementation/readerMNIST/: CMakeLists.txt  readImageMNIST.cpp  readLabelMNIST.cpp
src/: FCLayer.hpp  Loss.hpp  NeuralNetwork.hpp  ReLU.hpp  SGD.hpp  Softmax.hpp  delete.cpp  delete.hpp  readImageMNIST.hpp  readLabelMNIST.hpp
